Changing swagger definition towards first proposal of 'broadcasting api'.
