# src/main/java/ro/gov/ithub/stopcozi/model/repo/FreeSlot.java
@@ -1,15 +1,0 @@
-package ro.gov.ithub.stopcozi.model.repo;
-
-import lombok.Data;
-
-import java.util.Date;
-
-@Data
-public class FreeSlot {
-
-  private Date start;
-
-  private Date end;
-
-}
-
